avoid stretching people

--- a/app/assets/stylesheets/utils/components/_slider.scss
+++ b/app/assets/stylesheets/utils/components/_slider.scss
@@ -41,8 +41,7 @@
         }
     }
     &__picture {
-        height: 95%;
-        width: auto;
+        max-height: 95%;
         transition: transform 1s;
         &:hover {
             transform: translateZ(20px); 
